Added portfolio.html bootstrap classes and updated stylesheet for responsive portfolio.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					</div> <!-- end col-sm-12 -->
 				</div> <!-- end row -->
 				<div class="row">
-					<div class="col-lg-12 col-xs-4">
+					<div class="col-sm-12 col-xs-4">
 						<!-- Social Icons -->
 						<a href="https://github.com/laneelliott" target="_blank">
 							<img class="third-width" src="assets/images/logo-github.png" alt="Github">
