--- a/contact.html
+++ b/contact.html
@@ -3,78 +3,139 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lane Anderson Portfolio</title>
-	<!-- Clear Styles for Browser compatability -->
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<!-- Bootstrap 3.3.7 CDN -->
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Custom Globoal Stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
 </head>
 <body>
+
 	<!-- Header and Navigation Menu -->
-	<header>
-		<div class="content-width wrapper">
-			<!-- Page Heading -->
-			<div class="page-heading">
-				<h1 class="padding">Lane Anderson</h1>
+	<header class="container-fluid">
+		<div class="container desktop-nav">
+			<div class="row">
+				<!-- Page Heading -->
+				<div class="col-xs-4 page-heading text-center">
+					<div>
+						<h1>Lane Anderson</h1>
+					</div>
+				</div> <!-- end col-xs-6 -->
+				<!-- Navigation Menu -->
+				<div class="col-xs-6 col-xs-offset-2 text-right">
+					<nav>
+						<a href="index.html">About</a>
+						<span class="v-bar"> | </span>
+						<a href="portfolio.html">Portfolio</a>
+						<span class="v-bar"> | </span>
+						<a href="#">Contact</a>
+					</nav>
+				</div> <!-- end col-xs-6 -->
+			</div> <!-- end row -->
+		</div> <!-- end container -->
+		<div class="container-fluid mobile-nav">
+			<div class="row ">
+				<!-- Page Heading -->
+				<div class="col-12 page-heading text-center">
+					<div>
+						<h1>Lane Anderson</h1>
+					</div>
+				</div> <!-- end col-xs-6 -->
 			</div>
 			<!-- Navigation Menu -->
-			<nav>
-				<a href="index.html">About</a>
-				<span class="v-bar"> | </span>
-				<a href="portfolio.html">Portfolio</a>
-				<span class="v-bar"> | </span>
-				<a href="#">Contact</a>
-			</nav>
+			<div class="row">
+				<div class="col-12 text-center">
+					<nav>
+						<a href="#">About</a>
+						<span class="v-bar"> | </span>
+						<a href="portfolio.html">Portfolio</a>
+						<span class="v-bar"> | </span>
+						<a href="contact.html">Contact</a>
+					</nav>
+				</div> <!-- end col-xs-6 -->
+			</div> <!-- end row -->
 		</div>
 	</header>
 
-	<!-- Main Content Section: Includes Content and Sidebar -->
-	<section class="content-width wrapper">
-		<div class="content-block ">
-			<h1 class="margin">Portfolio</h1>
-			<hr>
-			<div class="content padding">
-				<div>
-					<label>Name</label>
-					<input type="text" name="name" placeholder="John Doe">
-				</div>
-				<div>
-					<label>Email</label>
-					<input type="email" name="email" placeholder="example@gmail.com">
-				</div>
-				<div>
-					<label>Message</label>
-					<textarea name="message"></textarea>
-				</div>
-				<div>
-					<button name="submit">Submit</button>
-				</div>
-			</div> <!-- end content -->
-		</div> <!-- end content-block -->
 
-		<!-- Sidebar -->
-		<aside>
-			<h3 class="margin">Connect with Me</h3>
-			<hr>
-			<div class="padding">
-				<!-- Social Icons -->
-				<a href="https://github.com/laneelliott" target="_blank">
-					<img class="third-width" src="assets/images/logo-github.png" alt="Github">
-				</a>
-				<a href="https://www.linkedin.com/in/lane-anderson-836735125/" target="_blank">
-					<img class="third-width" src="assets/images/logo-linkedin.png" alt="LinkedIn">
-				</a>
-				<a href="https://stackoverflow.com/users/7547775/landerson" target="_blank">
-					<img class="third-width" src="assets/images/logo-stackoverflow.png" alt="Stack Overflow">
-				</a>
-			</div>
-		</aside>
-	</section>
+	<!-- Main Content Section: Includes Content and Sidebar -->
+	<section class="container">
+		<div class="row ">
+			<div class="col-sm-8 content-block">
+				<div class="row">
+					<div class="col-sm-12">
+						<h1 class="margin">Contact</h1>
+						<hr>
+					</div> <!-- end col-sm-12 -->
+				</div> <!-- end row -->
+				<div class="row">
+					<div class="col-sm-12">
+						<div>
+							<label>Name</label>
+							<input type="text" name="name" placeholder="John Doe">
+						</div>
+					</div> <!-- end col-sm-12 -->
+				</div> <!-- end row -->
+				<div class="row">
+					<div class="col-sm-12">
+						<div>
+							<label>Email</label>
+							<input type="email" name="email" placeholder="example@gmail.com">
+						</div>
+					</div> <!-- end col-sm-12 -->
+				</div> <!-- end row -->
+				<div class="row">
+					<div class="col-sm-12">
+						<div>
+							<label>Message</label>
+							<textarea name="message"></textarea>
+						</div>
+					</div> <!-- end col-sm-12 -->
+				</div> <!-- end row -->
+				<div class="row">
+					<div class="col-sm-12">
+						<div>
+							<button name="submit">Submit</button>
+						</div>
+					</div>
+				</div>
+			</div> <!-- end col-sm-9 -->
+			
+			<!-- Sidebar -->
+			<aside class="col-sm-3 col-sm-offset-1">
+				<div class="row">
+					<div class="col-sm-12">
+						<h3 class="">Connect with Me</h3>
+						<hr>
+					</div> <!-- end col-sm-12 -->
+				</div> <!-- end row -->
+				<div class="row">
+					<div class="col-sm-12 col-xs-4">
+						<!-- Social Icons -->
+						<a href="https://github.com/laneelliott" target="_blank">
+							<img class="third-width" src="assets/images/logo-github.png" alt="Github">
+						</a>
+						<a href="https://www.linkedin.com/in/lane-anderson-836735125/" target="_blank">
+							<img class="third-width" src="assets/images/logo-linkedin.png" alt="LinkedIn">
+						</a>
+						<a href="https://stackoverflow.com/users/7547775/landerson" target="_blank">
+							<img class="third-width" src="assets/images/logo-stackoverflow.png" alt="Stack Overflow">
+						</a>
+					</div> <!-- end col-lg-12 -->
+				</div> <!-- end row -->
+			</aside> <!-- end aside -->
+		</div> <!-- end row -->
+
+
+	</section>  <!-- end container -->
 
 	<!-- Footer -->
-	<footer>
-		<p>&copy; Copyright 2017 Lane Anderson</p>
-	</footer>
+	<footer class="container-fluid">
+		<div class="row">
+			<div class="col-12">
+				<p>&copy; Copyright 2017 Lane Anderson</p>
+			</div> <!-- end col-12 -->
+		</div> <!-- end row -->
+	</footer> <!-- end container -->
 
 </body>
 </html>
