--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<!-- Bootstrap 3.3.7 CDN -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Custom Globoal Stylesheet -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 <body>
 
