--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
                         <h4>Thank you for taking the time to look for my work at <strong>laneelliott.com</strong></p>
                         <h4>This portfolio page was an example that I had created as part a learning excersize a <em>long time ago...in a galaxy far far away</em>. I am currently in the works of rewriting my portfolio and uploading an award winning portfolio project, or so I hope.</h4>
                         <h4>I would encourage you to please look at my Github account for projects I've worked on. There are many demo projects there that involve a lot of the different technologies and frameworks that I've worked with.</h4>
-                        <h4>This page should be updated by the end of May 1, 2018.</h4>
+                        <h4>This page should be updated by the end of May, 2018.</h4>
                     </div>
                     <!-- end col-sm-12 -->
                 </div>
